Phase 1: Core API Foundation
Implemented foundational REST API for SchoolOps school management system.

Features:
- JWT Authentication with bcrypt password hashing
- User registration, login, token refresh endpoints
- Complete Student CRUD operations with pagination & filtering
- Role-based access control (8 user roles)
- Self-hosted AI architecture (Ollama/HuggingFace ready)
- Async PostgreSQL with asyncpg driver
- API documentation (Swagger/ReDoc)

Files:
- app/api/auth.py: Authentication endpoints
- app/api/students.py: Student SIS endpoints
- app/core/security.py: JWT validation & authorization
- app/schema/auth_schema.py: Auth Pydantic schemas
- app/schema/student_schema.py: Student Pydantic schemas
- app/services/ai_service.py: Self-hosted AI configuration
- main.py: Updated with REST API routes
- requirements.txt: Added asyncpg, AI dependencies

Budget-friendly: Uses self-hosted AI to avoid OpenAI costs
Timeline: Core APIs ready for integration testing

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,15 +10,20 @@ sqlalchemy==2.0.25
 alembic==1.13.1
 psycopg2-binary==2.9.9
 redis==5.0.1
+asyncpg==0.29.0  # Async PostgreSQL support
 
 # Authentication
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
 
-# AI Integration
+# AI Integration (Self-hosted friendly)
 httpx==0.26.0
 aiofiles==23.2.1
+
+# Free AI Options (Self-hosted)
+# ollama>=0.1.0  # Uncomment for local AI via Ollama
+# transformers>=4.36.0  # Uncomment for HuggingFace local models
 
 # Utilities
 python-dotenv==1.0.0
