Phase 2: Payment Gateway & Fee Management
Implemented comprehensive finance module with budget-conscious payment processing.

Features:
- Fee Structure Management: Create/manage fee categories
- Payment Processing: Support for multiple payment methods
- Provider Pattern: Extensible payment gateway architecture
- PDF Receipt Generation: Using ReportLab (free/open-source)
- Collection Reports: Track revenue and defaulters

Payment Providers Implemented:
1. Manual Provider (FREE): Cash, cheque, bank transfer recording
2. Bank Transfer Provider (FREE): NEFT/RTGS/IMPS recording
3. Stripe Provider: Online card/UPI payments (2.9% per transaction)

Budget-Friendly Features:
- Zero-cost manual payment recording
- Free PDF receipt generation with ReportLab
- Stripe free tier for test transactions
- Self-hosted solution - no recurring platform fees

API Endpoints:
- GET/POST /api/v1/fees - Fee structure management
- GET /api/v1/fees/records - Fee records with filters
- GET /api/v1/fees/reports/collection - Collection report
- GET /api/v1/fees/reports/defaulters - Defaulter list
- POST /api/v1/payments - Process payment
- GET /api/v1/payments - Payment history
- GET /api/v1/payments/{id}/receipt - Download PDF receipt

Files:
- app/api/fees.py: Fee management endpoints
- app/api/payments.py: Payment processing endpoints
- app/schema/payment_schema.py: Payment Pydantic schemas
- app/services/payment_gateway/: Provider pattern implementation
- app/services/payment_service.py: Payment business logic
- app/services/receipt_service.py: PDF receipt generation
- requirements.txt: Added reportlab for PDF generation

Next: Phase 3 - SMS Integration for notifications

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -31,6 +31,9 @@ pydantic==2.5.3
 pydantic-settings==2.1.0
 email-validator==2.1.0
 
+# PDF Generation (Receipts) - Free/Open Source
+reportlab==4.0.8
+
 # Async
 anyio==4.2.0
 asyncio==3.4.3
