Phase 3: SMS Integration & Notifications
Implemented comprehensive SMS notification system with budget-conscious design.

Features:
- SMS Provider Pattern: Extensible provider architecture
- Template-Based Messaging: Variable substitution support
- Delivery Tracking: Logs and statistics
- Notification Triggers: Fee, attendance, meeting notifications

SMS Providers Implemented:
1. Mock Provider (FREE): Testing and development
2. Email-to-SMS Provider (FREE): Via carrier email gateways
3. Twilio Provider: Paid international SMS (2.9% of transaction value)

Budget-Friendly Features:
- Free email-to-SMS (uses existing SMTP server)
- Mock provider for testing (/bin/bash cost)
- Twilio free tier for test credentials
- No per-message costs for internal notifications

Free Email-to-SMS Support:
- Major Indian carriers: Airtel, Jio, Vi, BSNL
- Major US carriers: AT&T, Verizon, T-Mobile, Sprint
- UK carriers: Vodafone, O2, EE

Default Templates:
- Fee Payment Received confirmation
- Fee Payment Reminder
- Attendance Absent Alert
- Meeting Scheduled notification

API Endpoints:
- POST /api/v1/sms/send - Send single SMS
- POST /api/v1/sms/send/template - Send using template
- POST /api/v1/sms/bulk - Bulk SMS (up to 1000 recipients)
- GET /api/v1/sms/templates - List templates
- POST /api/v1/sms/templates - Create template
- GET /api/v1/sms/history - Delivery history
- GET /api/v1/sms/stats - Delivery statistics
- POST /api/v1/sms/webhook/twilio - Webhook for delivery status
- GET /api/v1/sms/provider/status - Provider configuration

Files:
- app/api/sms.py: SMS API endpoints
- app/schema/sms_schema.py: SMS Pydantic schemas
- app/services/sms/base.py: Provider base interface
- app/services/sms/factory.py: Provider factory
- app/services/sms/notification_service.py: Notification logic
- app/services/sms/providers/mock_provider.py: Free testing provider
- app/services/sms/providers/email_sms_provider.py: Free email-to-SMS
- app/services/sms/providers/twilio_provider.py: Twilio int

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -37,3 +37,9 @@ reportlab==4.0.8
 # Async
 anyio==4.2.0
 asyncio==3.4.3
+
+# SMS Services - Paid (with free test mode)
+twilio>=9.0.0
+
+# Email-to-SMS Support - Free
+aiosmtplib>=3.0.0
